fix: javafx:run時はGPUプローブ子をOpenJFXのmodule-path起動に切替（ランタイム不足を解消）